--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,39 @@
-Hello node app cooll
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <form action="/" method="POST">
 
-I ejoy this mad shit >>>>>
+        <input type="url" placeholder="Enter Link" name="url" required>
+      
+<button type="submit">shortend</button>
+    </form>
+
+    <table>
+        <thead>
+          <tr>
+            <th>
+                Full Url
+            </th>
+            <th>
+                Short Url
+            </th>
+            <th>
+                count
+            </th>
+          </tr>  
+          <tbody>
+            <tr>
+                <td>www.we.com</td>
+                <td>shor.com</td>
+                <td>0</td>
+            </tr>
+          </tbody>
+        </thead>
+    </table>
+</body>
+</html>
