--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title><!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+
+    <style>
+        body{
+            background-color: antiquewhite;
+            box-sizing: border-box;
+        }
+        .container{
+background-color: white;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 4rem;
+width: 60%;
+height: 80vh;
+margin: auto;
+        }
+        table{
+            /* background-color: green; */
+            border: 2px solid rgb(199, 194, 194);
+            border-collapse: collapse;
+        }
+        table thead th, td{
+            border: 2px solid black;
+            padding: 1rem;
+        }
+        table thead th{
+            background-color: blanchedalmond;
+            border-collapse: collapse;
+            /* border-collapse: separate; */
+
+        }
+
+        form{
+            padding: 2rem;
+        }
+
+        form input, form button{
+            padding: 0.5rem 1.5rem;
+        }
+
+    </style>
 </head>
 <body>
+    <div class="container">
+
     <form action="/" method="POST">
 
         <input type="url" placeholder="Enter Link" name="url" required>
@@ -13,7 +57,7 @@
 <button type="submit">shortend</button>
     </form>
 
-    <table>
+    <table class="containerw">
         <thead>
           <tr>
             <th>
@@ -28,12 +72,19 @@
           </tr>  
           <tbody>
             <tr>
-                <td>www.we.com</td>
+                <td class="btn-primary">www.we.com hhhhhh</td>
                 <td>shor.com</td>
                 <td>0</td>
             </tr>
           </tbody>
         </thead>
     </table>
+
+
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
+</div>
+  
 </body>
 </html>
